feat(pdp): adjusted product description and specs section

--- a/store/blocks/product/description.jsonc
+++ b/store/blocks/product/description.jsonc
@@ -65,8 +65,8 @@
   },
   "product-description": {
     "props": {
-      "title": "Mais informações",
-      "collapseContent": false
+      "title": "Descrizione",
+      "blockClass": "pdp"
     }
   }
 }
