Fix: Ajustment Facebook icon

--- a/store/blocks/footer/newsletter.jsonc
+++ b/store/blocks/footer/newsletter.jsonc
@@ -96,7 +96,7 @@
   },
   "image#facebook": {
     "props": {
-      "src": ""
+      "src": "assets/icons/social/Facebook.svg"
     }
   },
   "link#instagram": {
