--- a/store/blocks/product/product-main-infos.jsonc
+++ b/store/blocks/product/product-main-infos.jsonc
@@ -4,7 +4,7 @@
       "flex-layout.row#pdp-product-name",
       "flex-layout.row#pdp-rating-and-whishlist",
       "flex-layout.row#pdp-price-and-installments",
-      "flex-layout.row#pdp-quantity-and-add-to-cart",
+      "condition-layout.product#availability",
       "flex-layout.row#pdp-shipping",
       "flex-layout.row#pdp-product-and-shipping-description"
     ],
@@ -64,89 +64,11 @@
     }
   },
 
-  "flex-layout.row#pdp-price-and-installments": {
-    "children": ["flex-layout.col#pdp-price-and-installments"],
-    "props": {
-      "blockClass": "pdp-price-and-installments",
-      "preventVerticalStretch": true,
-      "width": "100%"
-    }
-  },
-  "flex-layout.col#pdp-price-and-installments": {
-    "children": [
-      "flex-layout.row#pdp-price",
-      "flex-layout.row#pdp-installments"
-    ],
-    "props": {
-      "blockClass": "pdp-price-and-installments",
-      "preventVerticalStretch": true,
-      "width": "100%"
-    }
-  },
-
-  "flex-layout.row#pdp-price": {
-    "children": [
-      "product-selling-price#pdp",
-      "product-list-price#pdp",
-      "product-price-savings#pdp"
-    ],
-    "props": {
-      "blockClass": "pdp-price",
-      "preventVerticalStretch": true,
-      "preventHorizontalStretch": true,
-      "fullWidth": false,
-      "colGap": 0,
-      "colSizing": "auto",
-      "horizontalAlign": "left"
-    }
-  },
-  "product-selling-price#pdp": {
-    "props": {
-      "blockClass": "pdp"
-    }
-  },
-  "product-list-price#pdp": {
-    "props": {
-      "blockClass": "pdp"
-    }
-  },
-  "product-price-savings#pdp": {
-    "props": {
-      "markers": ["savingsPercentage"],
-      "message": "{savingsPercentage} di sconto",
-      "blockClass": "pdp"
-    }
-  },
-
-  "flex-layout.row#pdp-installments": {
-    "children": [
-      "product-installments#pdp"
-      //  "image#pdp-scalapay-logo"
-    ],
-    "props": {
-      "blockClass": "pdp-installments",
-      "preventVerticalStretch": true,
-      "width": "100%"
-    }
-  },
-  "product-installments#pdp": {
-    "props": {
-      "blockClass": "pdp",
-      "message": "o {installmentsNumber} rate da {installmentValue} senza interessi. {paymentSystemName}"
-    }
-  },
-  // "image#pdp-scalapay-logo": {
-  //   "props": {
-  //     "src": "https://via.placeholder.com/90x18/E30613/fff",
-  //     "alt": "scalapay",
-  //     "blockClass": "pdp-scalapay-logo"
-  //   }
-  // },
-
   "flex-layout.row#pdp-quantity-and-add-to-cart": {
     "children": ["flex-layout.col#pdp-quantity-and-add-to-cart"],
     "props": {
       "blockClass": "pdp-quantity-and-add-to-cart",
+      "preserveLayoutOnMobile": true,
       "preventVerticalStretch": true,
       "width": "100%"
     }
@@ -169,6 +91,7 @@
     ],
     "props": {
       "blockClass": "pdp-quantity-and-add-to-cart-children",
+      "preserveLayoutOnMobile": true,
       "preventVerticalStretch": true,
       "width": "100%"
     }
@@ -178,7 +101,7 @@
     "props": {
       "blockClass": "pdp-quantity",
       "preventVerticalStretch": true,
-      "width": "100%"
+      "width": "50%"
     }
   },
   "product-quantity#pdp": {
@@ -193,7 +116,7 @@
     "props": {
       "blockClass": "pdp-add-to-cart",
       "preventVerticalStretch": true,
-      "width": "100%"
+      "width": "50%"
     }
   },
   "rich-text#pdp-secure-payment": {
@@ -218,6 +141,7 @@
     "props": {
       "blockClass": "pdp-shipping",
       "preventVerticalStretch": true,
+      "preserveLayoutOnMobile": true,
       "width": "100%"
     }
   },
