--- a/store/blocks/product/product-price.jsonc
+++ b/store/blocks/product/product-price.jsonc
@@ -1,44 +1,81 @@
 {
-  "flex-layout.row#product-price": {
-    "children": ["flex-layout.col#product-price"],
+  "flex-layout.row#pdp-price-and-installments": {
+    "children": ["flex-layout.col#pdp-price-and-installments"],
     "props": {
-      "blockClass": "product-price"
+      "blockClass": "pdp-price-and-installments",
+      "preventVerticalStretch": true,
+      "width": "100%"
     }
   },
-  "flex-layout.col#product-price": {
-    "children": ["flex-layout.row#product-main-product-price"]
-  },
-  "flex-layout.row#product-main-product-price": {
-    "children": ["flex-layout.col#product-main-product-price"],
-    "props": {
-      "blockClass": "product-main-price",
-      "preventHorizontalStretch": true
-    }
-  },
-  "flex-layout.col#product-main-product-price": {
+  "flex-layout.col#pdp-price-and-installments": {
     "children": [
-      "product-selling-price#pdp",
-      "product-price-savings#discount",
-      "product-installments"
+      "flex-layout.row#pdp-price",
+      "flex-layout.row#pdp-installments"
     ],
     "props": {
-      "blockClass": "product-main-price"
+      "blockClass": "pdp-price-and-installments",
+      "preventVerticalStretch": true,
+      "width": "100%"
+    }
+  },
+
+  "flex-layout.row#pdp-price": {
+    "children": [
+      "product-selling-price#pdp",
+      "product-list-price#pdp",
+      "product-price-savings#pdp"
+    ],
+    "props": {
+      "blockClass": "pdp-price",
+      "preventVerticalStretch": true,
+      "preventHorizontalStretch": true,
+      "preserveLayoutOnMobile": true,
+      "fullWidth": false,
+      "colGap": 0,
+      "colSizing": "auto",
+      "horizontalAlign": "left"
     }
   },
   "product-selling-price#pdp": {
     "props": {
-      "blockClass": ["pdp"]
+      "blockClass": "pdp"
+    }
+  },
+  "product-list-price#pdp": {
+    "props": {
+      "blockClass": "pdp"
     }
   },
   "product-price-savings#pdp": {
     "props": {
-      "blockClass": ["pdp"]
+      "markers": ["savingsPercentage"],
+      "message": "{savingsPercentage} di sconto",
+      "blockClass": "pdp"
     }
   },
-  "product-installments": {
+
+  "flex-layout.row#pdp-installments": {
+    "children": [
+      "product-installments#pdp"
+      //  "image#pdp-scalapay-logo"
+    ],
     "props": {
-      "message": "{installmentsNumber} rate da {installmentValue}",
-      "blockClass": "product-main-installments"
+      "blockClass": "pdp-installments",
+      "preventVerticalStretch": true,
+      "width": "100%"
+    }
+  },
+  "product-installments#pdp": {
+    "props": {
+      "blockClass": "pdp",
+      "message": "o {installmentsNumber} rate da {installmentValue} senza interessi. {paymentSystemName}"
     }
   }
+  // "image#pdp-scalapay-logo": {
+  //   "props": {
+  //     "src": "https://via.placeholder.com/90x18/E30613/fff",
+  //     "alt": "scalapay",
+  //     "blockClass": "pdp-scalapay-logo"
+  //   }
+  // },
 }
