--- a/store/blocks/product/specification.jsonc
+++ b/store/blocks/product/specification.jsonc
@@ -24,10 +24,16 @@
     "children": ["product-specification"]
   },
   "flex-layout.row#spec-group": {
-    "children": ["flex-layout.col#spec-group"]
+    "children": ["flex-layout.col#spec-group"],
+    "props": {
+      "blockClass": "spec-group"
+    }
   },
   "flex-layout.col#spec-group": {
-    "children": ["rich-text#spec-title", "product-specification"]
+    "children": ["rich-text#spec-title", "product-specification"],
+    "props": {
+      "blockClass": "spec-group"
+    }
   },
   "product-specification": {
     "children": ["flex-layout.row#spec-item"]
@@ -35,7 +41,9 @@
   "flex-layout.row#spec-item": {
     "children": ["flex-layout.col#spec-name", "flex-layout.col#spec-value"],
     "props": {
-      "blockClass": "productSpecificationItem"
+      "blockClass": "productSpecificationItem",
+      "colSizing": "auto",
+      "fullWidth": true
     }
   },
   "flex-layout.col#spec-name": {
