--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -343,11 +343,55 @@
       "preserveLayoutOnMobile": true
     }
   },
+
+
+
+
+  "drawer": {
+    "children": [
+      "menu#drawer"
+    ],
+    "blocks": ["drawer-trigger"],
+    "props": {
+      "blockClass": "filterMobileDrawer"
+      //"backdropMode": "none"
+    }
+  },
+  
+  "drawer-trigger": {
+    "children": ["rich-text#filtra"],
+    "props": {
+      "blockClass": "filterMobileDrawer"
+    }
+  },
+  
+  "rich-text#filtra": {
+    "props": {
+      "text": "Filtri",
+      "blockClass": "filterMobileDrawer"
+    }
+  }, 
+  
+  "menu#drawer": {
+    "children": [
+      "filter-navigator.v3#mobile"
+    ],
+    "props": {
+      "orientation": "vertical",
+      "blockClass": "filterMobileDrawer"
+    }
+  },
+
+
+
+
+
   "flex-layout.row#searchControlsMobile": {
     "children": [
       "search-products-count-per-page",
       "order-by.v2",
-      "filter-navigator.v3#mobile"
+      "drawer"
+      // "filter-navigator.v3#mobile"
     ],
     "props": {
       "preventHorizontalStretch": false,
@@ -375,12 +419,13 @@
   "filter-navigator.v3#mobile": {
     "blocks": ["sidebar-close-button"],
     "props": {
+      "layout": "desktop",
       "truncateFilters": true,
       "blockClass": "filterMobile",
-      "navigationTypeOnMobile": "collapsible",
-      "initiallyCollapsed": true,
+      "navigationTypeOnMobile": "page",
+      "initiallyCollapsed": false,
       "fullWidthOnMobile": true,
-      "updateOnFilterSelectionOnMobile": true,
+      "updateOnFilterSelectionOnMobile": false,
       "preventRouteChange": true
     }
   },
