--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -298,7 +298,7 @@
   "flex-layout.col#home-shelf-01": {
     "children": [
       "flex-layout.row#home-shelf-01-title",
-      "list-context.product-list#alsoView"
+      "list-context.product-list#also-view"
     ]
   },
 
@@ -335,7 +335,7 @@
   "flex-layout.col#home-shelf-02": {
     "children": [
       "flex-layout.row#home-shelf-02-title",
-      "list-context.product-list#alsoView"
+      "list-context.product-list#also-view"
     ]
   },
 
@@ -372,7 +372,7 @@
   "flex-layout.col#home-shelf-03": {
     "children": [
       "flex-layout.row#home-shelf-03-title",
-      "list-context.product-list#alsoView"
+      "list-context.product-list#also-view"
     ]
   },
 
