--- a/store/blocks/wishlist.jsonc
+++ b/store/blocks/wishlist.jsonc
@@ -43,6 +43,11 @@
       "custom-add-to-cart#event-trigger"
     ]
   },
+  "custom-add-to-cart#event-trigger": {
+    "props": {
+      "blockClass": "event-trigger"
+    }
+  },
   "slider-layout#wishlist": {
     "props": {
       "itemsPerPage": {
