[bugfix/21834] Add scrollTo description link

--- a/store/blocks/product/product-main-infos.jsonc
+++ b/store/blocks/product/product-main-infos.jsonc
@@ -253,7 +253,8 @@
   "link#pdp-disclosure-see-more": {
     "props": {
       "label": "Vedi altri dettagli sul prodotto",
-      "href": "#",
+      "href": "#completeDescription",
+      "scrollTo": "completeDescription",
       "blockClass": "pdp-disclosure-see-more"
     }
   },
