--- a/store/blocks/wishlist.jsonc
+++ b/store/blocks/wishlist.jsonc
@@ -30,22 +30,23 @@
   },
   "list-context.wishlist": {
     "blocks": ["product-summary.shelf#wishlist"],
-    "children": ["slider-layout#wishlist"]
+    "children": ["slider-layout#wishlist"],
+    "props": {
+      "blockClass": "wishlistProduct"
+    }
   },
   "product-summary.shelf#wishlist": {
     "children": [
       "flex-layout.row#summary-discount-wishIcon",
       "flex-layout.row#stackSavings",
-      "flex-layout.col#summaryInfo",
       "flex-layout.row#summary-prices",
       "product-summary-name",
+      "flex-layout.row#productReviews",
       "product-installments",
-      "custom-add-to-cart#event-trigger"
-    ]
-  },
-  "custom-add-to-cart#event-trigger": {
+      "flex-layout.row#add-to-cart"
+    ],
     "props": {
-      "blockClass": "event-trigger"
+      "blockClass": "wishlistProductItem"
     }
   },
   "slider-layout#wishlist": {
@@ -55,7 +56,7 @@
         "tablet": 3,
         "phone": 2
       },
-      "showNavigationArrows": "desktopOnly",
+      "showNavigationArrows": "always",
       "showPaginationDots": "never",
       "infinite": false,
       "fullWidth": true,
