[bugfix/21845] login  adjustment

--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -149,7 +149,8 @@
       "logInButtonBehavior": "link",
       "showPasswordVerificationIntoTooltip": true,
       "showIconProfile": true,
-      "iconLabel": "."
+      "iconLabel": ".",
+      "blockClass":"login"
     }
   },
   "icon-profile#profile": {
