[bugfix/21834] Update wishlist icon pdp

--- a/store/blocks/product/product-main-mobile.jsonc
+++ b/store/blocks/product/product-main-mobile.jsonc
@@ -25,7 +25,7 @@
   "flex-layout.col#product-images-mobile": {
     "children": [
       "product-price-savings#discount",
-      "add-to-list-btn",
+      "add-to-list-btn#pdp",
       "product-images#mobile"
     ],
     "props": {
