--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -8,8 +8,7 @@
     },
     "children": [
       "flex-layout.row#header-promotion",
-      "flex-layout.row#header-desktop-upper",
-      "flex-layout.row#header-categories"
+      "flex-layout.row#header-desktop-upper"
     ]
   },
   "flex-layout.row#header-promotion": {
@@ -150,7 +149,7 @@
       "showPasswordVerificationIntoTooltip": true,
       "showIconProfile": true,
       "iconLabel": ".",
-      "blockClass":"login"
+      "blockClass": "login"
     }
   },
   "icon-profile#profile": {
@@ -172,45 +171,6 @@
     "props": {
       "src": "assets/icons/heartIcon.svg",
       "width": "50px"
-    }
-  },
-  "flex-layout.row#header-categories": {
-    "children": [
-      "link#category1",
-      "link#category2",
-      "link#category3",
-      "link#category4"
-    ],
-    "props": {
-      "blockClass": "header-categories"
-    }
-  },
-  "link#category1": {
-    "props": {
-      "href": "#",
-      "blockClass": "header-category1",
-      "label": "Lorem ipsum dolor sit amet"
-    }
-  },
-  "link#category2": {
-    "props": {
-      "href": "#",
-      "blockClass": "header-category2",
-      "label": "Lorem ipsum dolor sit amet"
-    }
-  },
-  "link#category3": {
-    "props": {
-      "href": "#",
-      "blockClass": "header-category3",
-      "label": "Lorem ipsum dolor sit amet"
-    }
-  },
-  "link#category4": {
-    "props": {
-      "href": "#",
-      "blockClass": "header-category4",
-      "label": "Lorem ipsum dolor sit amet"
     }
   }
 }
