--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -1,6 +1,7 @@
 {
   "store.home": {
     "blocks": [
+      "flex-layout.row#submenu-categories",
       "flex-layout.row#home-main-slider",
       "flex-layout.row#home-categories",
       "flex-layout.row#home-shelf-01",
@@ -11,6 +12,45 @@
       "flex-layout.row#home-services",
       "flex-layout.row#homeBottomSection"
     ]
+  },
+  "flex-layout.row#submenu-categories": {
+    "children": [
+      "link#category1",
+      "link#category2",
+      "link#category3",
+      "link#category4"
+    ],
+    "props": {
+      "blockClass": "header-categories"
+    }
+  },
+  "link#category1": {
+    "props": {
+      "href": "#",
+      "blockClass": "header-category1",
+      "label": "Lorem ipsum dolor sit amet"
+    }
+  },
+  "link#category2": {
+    "props": {
+      "href": "#",
+      "blockClass": "header-category2",
+      "label": "Lorem ipsum dolor sit amet"
+    }
+  },
+  "link#category3": {
+    "props": {
+      "href": "#",
+      "blockClass": "header-category3",
+      "label": "Lorem ipsum dolor sit amet"
+    }
+  },
+  "link#category4": {
+    "props": {
+      "href": "#",
+      "blockClass": "header-category4",
+      "label": "Lorem ipsum dolor sit amet"
+    }
   },
 
   "flex-layout.row#home-main-slider": {
