--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -73,13 +73,13 @@
       "height": 612,
       "images": [
         {
-          "image": "https://dummyimage.com/1312x483/FFDADA/fff.jpg&text=Banner+01",
-          "mobileImage": "https://dummyimage.com/360x270/FFDADA/fff.jpg&text=Banner+01",
+          "image": "https://dummyimage.com/1312x483/4320A8/ffffff&text=Banner+01",
+          "mobileImage": "https://dummyimage.com/360x270/4320A8/ffffff&text=Banner+01",
           "description": "Banner 01"
         },
         {
-          "image": "https://dummyimage.com/1312x483/FFDADA/fff.jpg&text=Banner+02",
-          "mobileImage": "https://dummyimage.com/360x270/FFDADA/fff.jpg&text=Banner+02",
+          "image": "https://dummyimage.com/1312x483/4320A8/ffffff&text=Banner+02",
+          "mobileImage": "https://dummyimage.com/360x270/4320A8/ffffff&text=Banner+02",
           "description": "Banner 02"
         }
       ],
@@ -540,7 +540,7 @@
   },
   "image#home-blog-01": {
     "props": {
-      "src": "https://dummyimage.com/200x160/FFDADA/fff",
+      "src": "https://dummyimage.com/200x160/4320A8/ffffff",
       "blockClass": "home-blog-image",
       "link": {
         "url": "#"
@@ -575,7 +575,7 @@
   },
   "image#home-blog-02": {
     "props": {
-      "src": "https://dummyimage.com/200x160/FFDADA/fff",
+      "src": "https://dummyimage.com/200x160/4320A8/ffffff",
       "blockClass": "home-blog-image",
       "link": {
         "url": "#"
@@ -610,7 +610,7 @@
   },
   "image#home-blog-03": {
     "props": {
-      "src": "https://dummyimage.com/200x160/FFDADA/fff",
+      "src": "https://dummyimage.com/200x160/4320A8/ffffff",
       "blockClass": "home-blog-image",
       "link": {
         "url": "#"
@@ -645,7 +645,7 @@
   },
   "image#home-blog-04": {
     "props": {
-      "src": "https://dummyimage.com/200x160/FFDADA/fff",
+      "src": "https://dummyimage.com/200x160/4320A8/ffffff",
       "blockClass": "home-blog-image",
       "link": {
         "url": "#"
@@ -680,7 +680,7 @@
   },
   "image#home-blog-05": {
     "props": {
-      "src": "https://dummyimage.com/200x160/FFDADA/fff",
+      "src": "https://dummyimage.com/200x160/4320A8/ffffff",
       "blockClass": "home-blog-image",
       "link": {
         "url": "#"
@@ -760,7 +760,7 @@
   },
   "image#home-services-01": {
     "props": {
-      "src": "https://dummyimage.com/200x140/FFDADA/fff",
+      "src": "https://dummyimage.com/200x140/4320A8/ffffff",
       "blockClass": "home-services-image",
       "link": {
         "url": "#"
@@ -794,7 +794,7 @@
   },
   "image#home-services-02": {
     "props": {
-      "src": "https://dummyimage.com/200x140/FFDADA/fff",
+      "src": "https://dummyimage.com/200x140/4320A8/ffffff",
       "blockClass": "home-services-image",
       "link": {
         "url": "#"
@@ -828,7 +828,7 @@
   },
   "image#home-services-03": {
     "props": {
-      "src": "https://dummyimage.com/200x140/FFDADA/fff",
+      "src": "https://dummyimage.com/200x140/4320A8/ffffff",
       "blockClass": "home-services-image",
       "link": {
         "url": "#"
@@ -862,7 +862,7 @@
   },
   "image#home-services-04": {
     "props": {
-      "src": "https://dummyimage.com/200x140/FFDADA/fff",
+      "src": "https://dummyimage.com/200x140/4320A8/ffffff",
       "blockClass": "home-services-image",
       "link": {
         "url": "#"
@@ -896,7 +896,7 @@
   },
   "image#home-services-05": {
     "props": {
-      "src": "https://dummyimage.com/200x140/FFDADA/fff",
+      "src": "https://dummyimage.com/200x140/4320A8/ffffff",
       "blockClass": "home-services-image",
       "link": {
         "url": "#"
@@ -930,7 +930,7 @@
   },
   "image#home-services-06": {
     "props": {
-      "src": "https://dummyimage.com/200x140/FFDADA/fff",
+      "src": "https://dummyimage.com/200x140/4320A8/ffffff",
       "blockClass": "home-services-image",
       "link": {
         "url": "#"
