--- a/store/blocks/header/headerMobile.jsonc
+++ b/store/blocks/header/headerMobile.jsonc
@@ -32,7 +32,10 @@
     }
   },
   "flex-layout.row#menu-mobile": {
-    "children": ["flex-layout.col#menu-mobile"],
+    "children": [
+      "flex-layout.row#pdp-quantity-and-add-to-cart-fixed",
+      "flex-layout.col#menu-mobile"
+    ],
     "props": {
       "blockClass": "header-menu-mobile"
     }
