--- a/store/blocks/product/product-main.jsonc
+++ b/store/blocks/product/product-main.jsonc
@@ -25,8 +25,9 @@
       "displayThumbnailsArrows": true,
       "showNavigationArrows": false,
       "showPaginationDots": false,
-      "zoomMode": "disabled",
-      "maxHeight": 400
+      "zoomMode": "in-place-hover",
+      "maxHeight": 400,
+      "zoomFactor": 2
     }
   },
 
