--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -353,72 +353,73 @@
     }
   },
 
-  "drawer": {
-    "children": ["menu#drawer"],
-    "blocks": ["drawer-trigger"],
-    "props": {
-      "blockClass": "filterMobileDrawer",
-      "slideDirection": "rightToLeft"
-      //"backdropMode": "none"
-    }
-  },
+  // "drawer": {
+  //   "children": ["menu#drawer"],
+  //   "blocks": ["drawer-trigger"],
+  //   "props": {
+  //     "blockClass": "filterMobileDrawer",
+  //     "slideDirection": "rightToLeft"
+  //     //"backdropMode": "none"
+  //   }
+  // },
 
-  "drawer-trigger": {
-    "children": ["rich-text#filtra"],
-    "props": {
-      "blockClass": "filterMobileDrawer"
-    }
-  },
+  // "drawer-trigger": {
+  //   "children": ["rich-text#filtra"],
+  //   "props": {
+  //     "blockClass": "filterMobileDrawer"
+  //   }
+  // },
 
-  "rich-text#filtra": {
-    "props": {
-      "text": "Filtri",
-      "blockClass": "filterMobileDrawer"
-    }
-  },
+  // "rich-text#filtra": {
+  //   "props": {
+  //     "text": "Filtri",
+  //     "blockClass": "filterMobileDrawer"
+  //   }
+  // },
 
-  "menu#drawer": {
-    "children": ["filter-navigator.v3#mobile"],
-    "props": {
-      "orientation": "vertical",
-      "blockClass": "filterMobileDrawer"
-    }
-  },
+  // "menu#drawer": {
+  //   "children": ["filter-navigator.v3#mobile"],
+  //   "props": {
+  //     "orientation": "vertical",
+  //     "blockClass": "filterMobileDrawer"
+  //   }
+  // },
 
   "flex-layout.row#searchControlsMobile": {
     "children": [
       "search-products-count-per-page",
       "order-by.v2",
-      "drawer"
-      // "filter-navigator.v3#mobile"
+      //"drawer"
+      "filter-navigator.v3#mobile"
     ],
     "props": {
       "preventHorizontalStretch": false,
       "blockClass": "searchControlsMobile"
     }
   },
-  "flex-layout.col#orderByMobile": {
-    "children": ["order-by.v2"],
-    "props": {
-      "blockClass": "orderByMobileCol"
-    }
-  },
+  // "flex-layout.col#orderByMobile": {
+  //   "children": ["order-by.v2"],
+  //   "props": {
+  //     "blockClass": "orderByMobileCol"
+  //   }
+  // },
   "flex-layout.row#productCountMobile": {
     "children": ["total-products.v2"],
     "props": {
       "blockClass": "productCountMobileRow"
     }
   },
-  "flex-layout.col#filterMobile": {
-    "children": ["filter-navigator.v3#mobile"],
-    "props": {
-      "blockClass": "filterMobileCol"
-    }
-  },
+  // "flex-layout.col#filterMobile": {
+  //   "children": ["filter-navigator.v3#mobile"],
+  //   "props": {
+  //     "blockClass": "filterMobileCol"
+  //   }
+  // },
   "filter-navigator.v3#mobile": {
     "blocks": ["sidebar-close-button"],
     "props": {
-      "layout": "desktop",
+      "showFilterSelectedOnMobile": true,
+      "layout": "responsive",
       "truncateFilters": true,
       "blockClass": "filterMobile",
       "navigationTypeOnMobile": "collapsible",
@@ -426,7 +427,8 @@
       "fullWidthOnMobile": true,
       "updateOnFilterSelectionOnMobile": false,
       "preventRouteChange": true,
-      "showClearAllFiltersOnDesktop": true
+      "totalProductsOnMobile": "show"
+      //"showClearAllFiltersOnDesktop": true
     }
   },
   "search-not-found-layout": {
