--- a/manifest.json
+++ b/manifest.json
@@ -72,8 +72,7 @@
     "vtex.order-manager": "0.x",
     "vtex.order-items": "0.x",
     "vtex.modal-layout": "0.x",
-    "vtex.store-video": "1.x",
-    "bricobravo.custom-checkout-fields": "0.x"
+    "vtex.store-video": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
