--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,9 @@
   "peerDependencies": {
     "beightone.buy-together-marketplace": "0.x",
     "vtex.location-availability": "0.x",
-    "vtex.wish-list": "1.x"
+    "vtex.wish-list": "1.x",
+    "vtex.store-locator": "0.x",
+    "vtex.shopper-location": "1.x"
   },
   "dependencies": {
     "vtex.store": "2.x",
